WebHelpers ChangeLog
====================

tip (development version)
-------------------------
* webhelpers.constants:
  - Fix spelling of Massachusetts.
* webhelpers.html:
  - New ``HTML.cdata()`` method for producing "<!![CDATA[ ... ]]>" sections.
* webhelpers.html.tags:
  - ``image()`` can now calculate the width and height automatically
    from an image file, using either the PIL algorithm or the pure Python
    algorithm in ``webhelpers.media``. It also logs the dimensions to the
    debug log for troubleshooting.
* webhelpers.html.tools:
  - Reimplement ``highlight()`` using the HTML builder. New arguments add
    flexibility.  Deprecate the ``highlighter`` argument, which creates tags
    via string interpolation.
  - Fix HTML overescaping and underescaping in auto_link().  Patch by Marius
    Gedminas.  A parsing bug remains: 
    http://pylonshq.com/project/pylonshq/ticket/657
* webhelpers.media:
  - Bugfix in ``get_dimensions_pil``.
* webhelpers.paginate:
  - Change for SQLAlchemy 0.6. (bug #11)
* webhelpers.pylonslib:
  - Fix HTML overescaping.  Patch by Marius Gedminas.
* webhelpers.tools:
  - Reimplement ``highlight`` using HTML builder. Deprecate ``highlighter`` 
    argument. Allow search phrase to be a string, a list of strings, or a 
    regular expression. Add ``case_sensitive``, ``class_``, and ``**attrs``
    arguments.


1.0b1 (2009-11-20)
------------------
* Delete deprecated subpackage: rails.
  These are replaced by new helpers in date, html, misc, number, text.
* Delete other deprecated subpackages: commands, hinclude, htmlgen, pagination.
  Pagination is replaced by paginate.
* webhelpers.constants:
  - ``uk_counties`` returns tuples rather than lists.
* webhelpers.feedgenerator:
  - ``rfc3339_date`` now accepts date objects without crashing.
  - Add 'generator' and 'source' properties to RSS2 feeds. Patch by
    Vince Spicer.
  - Add 'published' property to Atom1 feeds.
* webhelpers.html.converters: