@@ -8,6 +8,8 @@ tip (development version)
 * webhelpers.html:
   - New ``HTML.cdata()`` method for producing "<!![CDATA[ ... ]]>" sections.
 * webhelpers.html.tags:
+  - Set magic ID attribute in ``hidden`` helper to match behavior of the other
+    tag helpers.
   - ``image()`` can now calculate the width and height automatically
     from an image file, using either the PIL algorithm or the pure Python
     algorithm in ``webhelpers.media``. It also logs the dimensions to the
